--- a/plugins/GeoIp2/lang/it.json
+++ b/plugins/GeoIp2/lang/it.json
@@ -1,11 +1,14 @@
 {
     "GeoIp2": {
         "AssumingNonApache": "Impossibile trovare la funzione apache_get_modules, si suppone che sia un server non-Apache.",
+        "CannotFindGeoIPDatabaseInArchive": "Nessun DBIP valido \/ Nessun database GeoIP trovato nell'archivio tar %1$s!",
         "CannotFindGeoIPServerVar": "La variabile %s non è impostata. Il tuo server potrebbe non essere correttamente configurato.",
         "CannotListContent": "Impossibile elencare il contenuto per %1$s: %2$s",
+        "CannotSetupGeoIPAutoUpdating": "Sembra che tu stia archiviando i tuoi database di geolocalizzazione al di fuori di Matomo (possiamo dirlo perché non ci sono database nella sottodirectory misc, ma il tuo GeoIP funziona). Matomo non può aggiornare automaticamente i database di geolocalizzazione se si trovano al di fuori della directory misc.",
         "CannotUnzipGeoIPFile": "impossibile scompattare il file geoIP in %1$s: %2$s",
         "DownloadingDb": "Sto scaricando %s",
         "DownloadNewDatabasesEvery": "Aggiorna il database ogni",
+        "FatalErrorDuringDownload": "Si è verificato un errore irreversibile durante il download di questo file. Potrebbe esserci qualcosa di sbagliato nella tua connessione Internet, con il database di geolocalizzazione che hai scaricato o con Matomo. Prova a scaricarlo e a installarlo manualmente.",
         "FoundApacheModules": "Matomo ha trovato i seguenti moduli Apache",
         "GeoIPImplHasAccessTo": "Questa implementazione GeoIP ha accesso ai seguenti tipi di database",
         "GeoIPDatabases": "Database GeoIP",
@@ -14,7 +17,12 @@
         "GeoIPNoDatabaseFound": "Questa implementazione GeoIP non ha potuto trovare un database.",
         "GeoIPNoServerVars": "Matomo non riesce a trovare nessuna delle variabili %s GeoIP.",
         "GeoIPServerVarsFound": "Matomo rileva le seguenti %s variabili GeoIP.",
+        "GeoIPUpdaterInstructions": "Inserisci qui sotto i collegamenti di download per i database. Se hai acquistato database da %3$sdbip%4$s o %1$sMaxMind%2$s, puoi trovare questi collegamenti nel tuo account dbip o MaxMind. Si prega di contattare il fornitore del database di geolocalizzazione in caso di difficoltà ad accedervi.",
+        "GeoIPUpdaterIntro": "Matomo sta attualmente gestendo gli aggiornamenti per i seguenti database",
         "GeoIPVariablesConfigurationHere": "Puoi configurare %1$squi%2$s le variabili del server utilizzate.",
+        "GeoLiteCityLink": "Se stai usando il database dbip city lite, usa questo link: %1$s%2$s%3$s",
+        "HowToSetupGeoIP": "Come impostare una geolocalizzazione accurata con dbip",
+        "HowToSetupGeoIP_Step1": "%1$sScarica%2$s il database DBIP City Lite da %3$sdbip%4$s.",
         "HowToSetupGeoIPIntro": "Sembra che tu non abbia una configurazione di Geolocalizzazione accurata. Questa è una funzionalità utile, e senza di essa non si avranno informazioni accurate e complete sulla localizzazione dei tuoi visitatori. Ecco come puoi iniziare a usarla rapidamente:",
         "HowToInstallApacheModule": "Come posso installare il modulo GeoIP per Apache?",
         "HowToInstallNginxModule": "Come posso installare il modulo GeoIP per Nginx?",
