--- a/plugins/Marketplace/lang/zh-cn.json
+++ b/plugins/Marketplace/lang/zh-cn.json
@@ -8,6 +8,7 @@
         "AllowedUploadFormats": "您可以通过该页面上传.zip格式的插件或主题。",
         "Authors": "作者",
         "Browse": "浏览",
+        "SupportMatomoThankYou": "任何购买都将为Matomo开源项目的未来提供资金。 谢谢您的支持！",
         "LatestMarketplaceUpdates": "最新市场更新",
         "BackToMarketplace": "返回商城",
         "BrowseMarketplace": "浏览市场",
@@ -69,10 +70,16 @@
         "PluginSubscriptionsList": "这是与您的许可证密钥关联的订阅列表。",
         "PaidPluginsNoLicenseKeyIntro": "如果您购买了%1$s个高级付费插件%2$s，请在下面插入收到的许可证密钥。",
         "PaidPluginsWithLicenseKeyIntro": "已设置有效的许可证密钥。 出于安全原因，我们不在此处显示许可证密钥。 如果您丢失了许可证密钥，请联系Matomo团队。",
+        "PaidPluginsNoLicenseKeyIntroNoSuperUserAccess": "如果您在Marketplace上购买了%1$s个高级付费插件%2$s，请询问具有“超级用户”访问权限的用户添加许可证密钥。",
+        "PluginDescription": "通过下载插件和主题，通过市场扩展和扩展Matomo的功能。",
         "PluginKeywords": "关键词",
         "PluginUpdateAvailable": "您正在使用的版本号为 %1$s，现在有最新的版本%2$s。",
         "PluginVersionInfo": "%1$s 从 %2$s",
         "PluginWebsite": "插件网站",
+        "PriceExclTax": "%1$s%2$s不含税。",
+        "PriceFromPerPeriod": "从%1$s\/%2$s",
+        "Reviews": "评论",
+        "ShownPriceIsExclTax": "显示的价格是不含税的。",
         "Screenshots": "截屏",
         "SortByNewest": "最新",
         "SortByAlpha": "按字母排序",
@@ -91,10 +98,20 @@
         "SubscriptionType": "类型",
         "SubscriptionStartDate": "开始日期",
         "SubscriptionEndDate": "结束日期",
+        "SubscriptionNextPaymentDate": "下次付款日期",
+        "SubscriptionInvalid": "此订阅无效或已过期",
+        "SubscriptionExpiresSoon": "此订阅即将过期",
         "Support": "支持",
         "TeaserExtendPiwikByUpload": "上传一个ZIP文件来扩展Matomo。",
+        "LicenseExceededPossibleCause": "已超出许可证。 Matomo安装上的用户数量可能超出订阅授权的数量。",
         "Updated": "已更新",
+        "UpdatingPlugin": "更新%1$s",
         "UploadZipFile": "上传 ZIP 文件",
+        "PluginUploadDisabled": "插件上传在配置文件中被禁用。 为了启用此功能，请更新您的配置或与管理员联系",
+        "LicenseKeyExpiresSoon": "您的许可证密钥即将过期，请联系%1$s。",
+        "LicenseKeyIsExpired": "您的许可证密钥已过期，请联系%1$s。",
+        "MultiServerEnvironmentWarning": "您无法像在多台服务器上使用Matomo一样直接安装或更新插件。 该插件只能安装在一台服务器上。 而是下载插件并将其手动部署到所有服务器。",
+        "AutoUpdateDisabledWarning": "您无法直接安装或更新插件，因为配置中禁用了自动更新。 要启用自动更新，请在%2$s中设置%1$s。",
         "ViewRepositoryChangelog": "查看修改"
     }
 }
