--- a/plugins/PrivacyManager/lang/de.json
+++ b/plugins/PrivacyManager/lang/de.json
@@ -7,25 +7,35 @@
         "AnonymizeIpMaskLengtDescription": "Wählen Sie aus, wieviele Bytes der Besucher-IP maskiert werden sollen.",
         "AnonymizeIpMaskLength": "%1$s byte(s) - z.B. %2$s",
         "AskingForConsent": "Um Erlaubnis bitten",
+        "ConsentExplanation": "Einverständnis bedeutet individuelle Wahl zu offerieren und Kontolle darüber, wie die persönlichen Daten verwendet werden sollen.",
         "ClickHereSettings": "Hier klicken, um die %s Einstellungen zu bearbeiten.",
         "WhenDoINeedConsent": "Wann muss ich die Zustimmung der Benutzer einholen?",
         "HowDoIAskForConsent": "Wie bitte ich die Benutzer um Zustimmung?",
         "AskForConsentFollowSteps": "Befolgen Sie die folgenden Schritte, um Ihre Benutzer um ihre Zustimmung zu bitten, bevor ihre Daten durch Matomo verarbeitet werden.",
         "AskForConsentStep1": "Schritt 1: Zustimmung voraussetzen",
+        "AskForConsentStep1Desc1": "Um das Einverständnis zu erfordern, fügen Sie die folgende Zeile am Anfang Ihres existierenden Matomo Tracking Codes bei all Ihren Seiten ein:",
         "AskForConsentStep2": "Schritt 2: Per Privacy Notice eine Zustimmung einholen",
         "AskForConsentStep3": "Schritt 3: Benutzer gibt seine Zustimmung",
+        "AskForConsentStep3Desc": "Sobald ein Benutzer das Einverständnis gibt, können Sie entweder A) Matomo das Einverständnis merken lassen oder B) Ihr eigenes Tool zum Merken des Einverständnisses einsetzen. Wir präsentieren die zwei Lösungen unten:",
         "AskForConsentStep3DescA": "A) Wenn Sie möchten, dass Matomo sich die Zustimmung merkt",
+        "AskForConsentStep3DescADesc1": "Sobald ein Benutzer das Einverständnis gibt, können Sie Matomo das Einverständnis merken lassen, indem Sie die einfach folgende Methode einmal aufrufen:",
+        "AskForConsentStep3DescANote1": "Standardmässig wird das Cookie mit dem Einverständnis für immer gespeichert. Es ist möglich, ein optionales Ablaufdatum für das Benutzereinverständnis zu definieren, mit Hilfe des Aufrufs:",
         "AskForConsentStep3DescANote3": "Es ist erforderlich, dass Sie Cookies nicht deaktivieren.",
         "AskForConsentStep3DescB": "B) wenn Sie Ihr eigenes Tool zur Speicherung der Einwilligung verwenden",
+        "AskForConsentStep3DescBDesc1": "In einigen Fällen registrieren Sie in Ihrem eigenen System oder CMS, dass der Benutzer das Einverständnis gegeben hat, getrackt zu werden (zum Beispiel wenn Sie Ihr eigenes Cookie zum Speichern des Benutzer-Einverständnisses verwenden). Wenn Sie einmal das Einverständnis des Benutzers erhalten haben, dessen Daten zu verarbeiten, müssen Sie die 'setContentGiven' Methode aufrufen:",
         "AskForConsentStep3DescBNote2": "Wenn der Benutzer seine Zustimmung gegeben hat, könnten Sie auch den Aufruf von %1$s von vornherein vermeiden.",
         "AskForConsentStep4": "Schritt 4: Benutzer widerruft Zustimmung",
         "AskForConsentStep4DescA": "A) Wenn Sie möchten, dass Matomo sich die Zustimmung merkt",
+        "AskForConsentStep4DescADesc": "Wenn die Benutzerin oder der Benutzer erklärt hat dass sie oder er nicht weiter das Einverständnis gibt, müssen Sie die folgende Methode einmal aufrufen:",
+        "AskForConsentStep4DescADesc2": "Dies stellt sicher dass das Cookie welches das erteilte Einverständnis enthält gelöscht wird.",
         "AskForConsentStep4DescB": "B) wenn Sie Ihr eigenes Tool zur Speicherung der Einwilligung verwenden",
+        "AskForConsentStep4DescBDesc": "Wenn die Benutzerin oder der Benutzer erklärt hat dass sie oder er nicht weiter das Einverständnis gibt, dürfen Sie die folgende Methode nicht mehr aufrufen:",
         "AskForConsentStepNotes": "Anmerkungen:",
         "AnonymizeSites": "Die Daten für diese Seite(n) anonymisieren",
         "AnonymizeRowDataFrom": "Alle Rohdaten anonymisieren startend ab:",
         "AnonymizeRowDataTo": "Alle Rohdaten anonymisieren bis zu:",
         "AnonymizeIp": "IP anonymisieren",
+        "AnonymizeIpHelp": "Diese Aktion kann nicht rückgängig gemacht werden. Falls aktiviert, werden für alle Besuche während dieser Zeit bei der IP mindestens 2 Bytes anonymisiert, zum Beispiel '192.168.xxx.xxx'. Wenn Sie aktuell konfiguriert haben 3 Bytes zu anonymisieren, dann wird diese Einstellung respektiert und bei allen IPs werden 3 Bytes anonymisiert.",
         "AnonymizeLocation": "Lokalisierung anonymisieren",
         "AnonymizeUserId": "Benutzer ID mit Pseudonym austauschen",
         "CurrentDBSize": "Aktuelle Größe der Datenbank",
