improves metric documentations

--- a/plugins/PagePerformance/lang/en.json
+++ b/plugins/PagePerformance/lang/en.json
@@ -1,17 +1,17 @@
 {
     "PagePerformance": {
         "ColumnAveragePageLoadTime": "Avg. page load time",
-        "ColumnAveragePageLoadTimeDocumentation": "Average time how long it takes from requesting a page until the page is fully rendered within the browser",
+        "ColumnAveragePageLoadTimeDocumentation": "Average time (in seconds) how long it takes from requesting a page until the page is fully rendered within the browser",
         "ColumnAverageTimeLatency": "Avg. latency time",
-        "ColumnAverageTimeLatencyDocumentation": "Average time how long it takes the response to get to the user’s device. Includes the time it takes for the request to get to the server, it takes the server to render a response, and until the first byte of that response gets back to the user’s device.",
+        "ColumnAverageTimeLatencyDocumentation": "Average time (in seconds) how long it takes the response to get to the user’s device. Includes the time it takes for the request to get to the server, it takes the server to render a response, and until the first byte of that response gets back to the user’s device.",
         "ColumnAverageTimeTransfer": "Avg. transfer time",
-        "ColumnAverageTimeTransferDocumentation": "Average time how long it takes the browser to download the response from the server.",
+        "ColumnAverageTimeTransferDocumentation": "Average time (in seconds) how long it takes the browser to download the response from the server. This is the time from receiving the first byte till the response is complete.",
         "ColumnAverageTimeDomProcessing": "Avg. DOM processing time",
-        "ColumnAverageTimeDomProcessingDocumentation": "Average time how long the browser spends loading the webpage until the user can starting interacting with it.",
+        "ColumnAverageTimeDomProcessingDocumentation": "Average time (in seconds) how long the browser spends loading the webpage after the response was fully received until the user can starting interacting with it.",
         "ColumnAverageTimeDomCompletion": "Avg. DOM completion time",
-        "ColumnAverageTimeDomCompletionDocumentation": "Average time how long it takes for the browser to load media and execute any Javascript code listening for the DOMContentLoaded event.",
+        "ColumnAverageTimeDomCompletionDocumentation": "Average time (in seconds) how long it takes for the browser to load media and execute any Javascript code listening for the DOMContentLoaded event after the the webpage was loaded and the user can already interact with it.",
         "ColumnAverageTimeOnLoad": "Avg. on load time",
-        "ColumnAverageTimeOnLoadDocumentation": "Average time how long it takes the browser to execute Javascript code waiting for the window.load event.",
+        "ColumnAverageTimeOnLoadDocumentation": "Average time (in seconds) how long it takes the browser to execute Javascript code waiting for the window.load event. This event is triggered once the DOM was completely rendered.",
         "ColumnViewsWithTimeLatency": "Pageviews with latency time",
         "ColumnViewsWithTimeTransfer": "Pageviews with transfer time",
         "ColumnViewsWithTimeDomProcessing": "Pageviews with DOM processing time",
