--- a/plugins/CorePluginsAdmin/lang/bg.json
+++ b/plugins/CorePluginsAdmin/lang/bg.json
@@ -3,7 +3,7 @@
         "ActionUninstall": "Деинсталиране",
         "Activate": "Активирай",
         "Activated": "Активиран",
-        "Active": "Активна",
+        "Active": "Активни",
         "Activity": "Активност",
         "AuthorHomepage": "Начало на автор",
         "Changelog": "Списък с промените",
@@ -12,7 +12,7 @@
         "Deactivate": "Деактивирай",
         "DoMoreContactPiwikAdmins": "За да се инсталира нова добавка или нова тема, трябва да се свържете с вашия администратор, който отговаря за Matomo.",
         "History": "История",
-        "Inactive": "Неактивна",
+        "Inactive": "Неактивни",
         "InfoPluginUpdateIsRecommended": "Обновете вашите добавки, за да се възползвате от най-новите подобрения.",
         "InfoThemeIsUsedByOtherUsersAsWell": "Забележка: други %1$s потребители регистрирани в този Matomo също използват тапет %2$s.",
         "InfoThemeUpdateIsRecommended": "Обновете вашите тапети, за да получите последната версия.",
@@ -36,6 +36,12 @@
         "Status": "Състояние",
         "SuccessfullyActicated": "Успешно беше активирано <strong>%s<\/strong>.",
         "TeaserExtendPiwik": "Разширете възможностите на Matomo с добавки и тапети",
+        "TagManagerNowAvailableTitle": "Matomo Tag Manager вече е достъпен",
+        "ActivateTagManagerNow": "Активирайте Tag Manager сега",
+        "WhatIsTagManager": "Какво е Tag Manager?",
+        "TagManagerLearnMoreInUserGuide": "Научете повече в ръководството на Tag Manager",
+        "WhyUsingATagManager": "Защо Tag Manager?",
+        "AreThereAnyRisks": "Има ли някакви рискове?",
         "Theme": "Тапет",
         "Themes": "Тапети",
         "ThemesDescription": "Тапетите могат да променят въшншия вид на потребителския интерфейс на Matomo и да осигурят ново пълноценно визуално усещане, за да се насладите на Вашите статистики.",
