--- a/plugins/Marketplace/lang/bg.json
+++ b/plugins/Marketplace/lang/bg.json
@@ -6,7 +6,9 @@
         "ActionInstall": "Инсталиране",
         "AllowedUploadFormats": "Може да качите добавка или тапет в zip формат посредством тази страница.",
         "Authors": "Автори",
+        "Browse": "Разглеждане",
         "BackToMarketplace": "Връщане към магазина за приложения",
+        "BrowseMarketplace": "Разгледайте магазина",
         "ByXDevelopers": "от %s разработчици",
         "Developer": "Разработчик",
         "Marketplace": "Магазин",
