--- a/plugins/PrivacyManager/lang/bg.json
+++ b/plugins/PrivacyManager/lang/bg.json
@@ -7,6 +7,7 @@
         "CurrentDBSize": "Настоящ размер на базата данни",
         "DBPurged": "Базата от данни е изтрита.",
         "DeleteDataInterval": "Изтрий стара информация на всеки",
+        "DeleteOldRawData": "Редовно изтриване на стари данни",
         "DeleteLogDescription2": "Ако включите автоматичното изтриване на логове, трябва да сте сигурни, че всичките предишни дневни отчети са били преработени, за да не се изгуби информация.",
         "DeleteLogsOlderThan": "Изтрий отчети по-стари от",
         "DeleteMaxRows": "Максималният брой редове, които да бъдат изтрити на един път:",
@@ -21,6 +22,7 @@
         "DoNotTrack_SupportDNTPreference": "Поддръжка на \"Не проследявай\" настройки.",
         "EstimatedDBSizeAfterPurge": "Изчислен размер на базата данни след изтриване",
         "EstimatedSpaceSaved": "Изчислено спестено място",
+        "GdprManager": "Управление на GDPR",
         "GetPurgeEstimate": "Изчисляване на времето за изтриване",
         "KeepBasicMetrics": "Запазване на основните данни (посещения, посещения на страници, степен на отпадане, цели, конверсия при електронна търговия и др.)",
         "KeepReportSegments": "За да запазите горната информация, също запазете сегментите на отчета.",
@@ -36,6 +38,7 @@
         "SaveSettingsBeforePurge": "Вие променихте настройките за изтриване на информация. Моля запазете ги, преди да започнете изтриване.",
         "TeaserHeadline": "Настройки на поверителността",
         "UseAnonymizeIp": "Правене на IP-тата на посетителите анонимни",
+        "UseDeleteLog": "Редовно изтриване на стари данни от базата данни",
         "UseDeleteReports": "Периодично изтрива старите посетителски отчети от базата данни"
     }
 }
