--- a/plugins/UserCountry/lang/el.json
+++ b/plugins/UserCountry/lang/el.json
@@ -40,6 +40,8 @@
         "SubmenuLocations": "Τοποθεσίες",
         "TestIPLocatorFailed": "Το Matomo προσπάθησε να ελέγξει την τοποθεσία μιας γνωστής διεύθυνσης IP (%1$s), αλλά ο διακομιστής σας δεν επέστρεψε πληροφορία. Ο πάροχος ενδέχεται να μην παραμετροποιήθηκε σωστά (η βάση δεδομένων γεωτοποθεσίας μπορεί να έχει λάθος όνομα ή να είναι σε λάθος κατάλογο, για παράδειγμα).",
         "ToGeolocateOldVisits": "Για να κάνετε λήψη των δεδομένων γεωτοποθεσίας από τις παλιές σας επισκέψεις, χρησιμοποιήστε το σενάριο που περιγράφεται %1$sεδώ%2$s.",
-        "WidgetLocation": "Τοποθεσία Επισκέπτη"
+        "WidgetLocation": "Τοποθεσία Επισκέπτη",
+        "GeoIpDbIpAccuracyNote": "Σημείωση: Οι βάσεις DBIP είναι δωρεάν και μπορούν να κατεβαίνουν αυτόματα, αλλά τα δεδομένα γεωτοποθεσίας (ειδικά των πόλεων) δεν είναι τόσης ακρίβειας όσο της MaxMind. Η MaxMind ωστόσο, απαιτεί τη δημιουργία λογαριασμού ακόμη και για τις δωρεάν βάσεις. Αν επιθυμείτε τη χρήση της βάσης γεωτοποθεσίας της MaxMind, μπορείτε να ξεκινήσετε τη διαδικασία %1$sεδώ%2$s.",
+        "MaxMindLinkExplanation": "Αν χρησιμοποιείτε τις βάσεις δεδομένων γεωτοποθεσίας της MaxMind και δεν γνωρίζετε πως να δημιουργήσετε τη διεύθυνση URL για το κατέβασμα, %1$sκάντε κλικ για να μάθετε πως%2$s."
     }
 }
