--- a/plugins/UserCountry/lang/zh-tw.json
+++ b/plugins/UserCountry/lang/zh-tw.json
@@ -6,6 +6,7 @@
         "Continent": "洲",
         "Continents": "洲",
         "Country": "國家",
+        "CountryCode": "國家代碼",
         "country_a1": "匿名的代理",
         "country_a2": "衛星網路供應商",
         "country_cat": "加泰羅尼亞語社區",
@@ -13,6 +14,7 @@
         "VisitLocation": "訪問所在地",
         "CurrentLocationIntro": "根據這個地理位置供應商，你目前的位置是",
         "DefaultLocationProviderDesc1": "預設的地理位置供應商是透過訪客使用的語言來猜測他的國家。",
+        "DefaultLocationProviderDesc2": "這沒有很準確，所以%1$s我們推薦安裝並使用%2$s任一地理位置資料庫%3$s。%4$s",
         "DefaultLocationProviderExplanation": "你正在使用預設地理位置供應商，這代表 Matomo 將以訪客所使用的語言來猜測他們的地理位置。%1$s點此查看%2$s如何安裝更準確的地理位置。",
         "DistinctCountries": "%s 個不同的國家",
         "FromDifferentCities": "不同城市",
@@ -23,6 +25,7 @@
         "getContinentDocumentation": "這份報表顯示你的訪客在瀏覽網站時所位於的洲別。",
         "getCountryDocumentation": "這份報表顯示你的訪客在瀏覽網站時所位於的國家。",
         "getRegionDocumentation": "這份報表顯示你的訪客在瀏覽網站時所位於的地區。",
+        "HowToInstallGeoIPDatabases": "我該如何取得地理位置資料庫？",
         "Latitude": "緯度",
         "Latitudes": "緯度",
         "Location": "位置",
