--- a/plugins/UsersManager/lang/bg.json
+++ b/plugins/UsersManager/lang/bg.json
@@ -46,6 +46,7 @@
         "YourUsernameCannotBeChanged": "Потребителското име не може да се променя.",
         "YourVisitsAreIgnoredOnDomain": "%1$sВашите посещения са игнорирани от Matomo в %2$s %3$s (Matomo игнорира бисквитката, намерена във Вашият браузър).",
         "YourVisitsAreNotIgnored": "%1$sВашите посещения не се игнорират от Matomo %2$s(Бисквитката за игнориране на Вашите посещения, не е открита във Вашият браузър).",
+        "ManageUsers": "Управление на потребители",
         "ShowAll": "Покажи всички",
         "Username": "Потребител"
     }
