--- a/plugins/VisitsSummary/lang/bg.json
+++ b/plugins/VisitsSummary/lang/bg.json
@@ -3,6 +3,10 @@
         "GenerateQueries": "%s заявки са изпълнени",
         "GenerateTime": "%s секунди за генериране на страницата",
         "NbActionsDescription": "%s действия (показвания, изтегляния и outlinks)",
+        "NbKeywordsDescription": "уникални ключови думи",
+        "NbUniqueDownloadsDescription": "уникални сваляния",
+        "NbUniqueVisitors": "уникални посетители",
+        "NbVisitsDescription": "посещения",
         "VisitsSummary": "Резюме на посещенията",
         "VisitsSummaryDocumentation": "Това е преглед на еволюцията на посещенията.",
         "WidgetLastVisits": "Последни посетители",
