--- a/lang/bg.json
+++ b/lang/bg.json
@@ -1,5 +1,7 @@
 {
     "General": {
+        "12HourClock": "12-часов формат",
+        "24HourClock": "24-часов формат",
         "AbandonedCarts": "Отказани колички",
         "AboutPiwikX": "За Matomo %s",
         "Action": "Действие",
@@ -11,12 +13,14 @@
         "AllWebsitesDashboard": "Табло за всички сайтове",
         "And": "и",
         "API": "API",
+        "Apply": "Приложи",
         "ArchivingInlineHelp": "За сайтовете със среден или висок трафик, препоръчваме да изключите Matomo архивиране след гледане от браузър. Съветваме ви в този случай да използвате cron job за Вашите доклади на всеки час.",
         "ArchivingTriggerDescription": "За по-големи Matomo инсталации, се препоръчва %1$scron job%2$s за автоматични доклади.",
         "AuthenticationMethodSmtp": "Удостоверен метод за SMTP",
         "AverageOrderValue": "Средна стойност на поръчка",
         "AveragePrice": "Средна цена",
         "AverageQuantity": "Средно количество",
+        "AverageX": "Средно %s",
         "BackToPiwik": "Върни се в Matomo",
         "Broken": "Счупен",
         "BrokenDownReportDocumentation": "Той е разбит в различни доклади, които са показани по-светли в долната част на страницата. Можете да увеличите графиките, като кликнете върху доклада, който бихте искали да видите.",
@@ -24,11 +28,13 @@
         "CannotUnzipFile": "Не може да се разархивира файл %1$s: %2$s",
         "ChangePassword": "Смяна на парола",
         "ChangeTagCloudView": "Моля, имайте предвид, че можете да видите доклада и по други начини, освен като облак от етикети. За целта, използвайте знаците в долната част на доклада.",
+        "ChooseDate": "Изберете дата, текущо избраната дата е: %s",
         "ChooseLanguage": "Избери език",
         "ChoosePeriod": "Избери период",
         "ClickHere": "Кликнете тук за повече информация.",
         "Close": "Затваряне",
         "ClickToSearch": "Щракнете, за да търсите",
+        "Copy": "Копиране",
         "ColumnActionsPerVisit": "Действия при посещение",
         "ColumnActionsPerVisitDocumentation": "Среден брой на действията (показвания на страници, изтегляния или отваряне на външни връзки), извършени по време на посещенията.",
         "ColumnAverageGenerationTime": "Средно времетраене за обработка на заявката",
@@ -36,6 +42,7 @@
         "ColumnAverageTimeOnPage": "Средно време на страница",
         "ColumnAverageTimeOnPageDocumentation": "Средно време, което посетителите са прекарали на тази страница (само на страницата, а не на целия сайт).",
         "ColumnAvgTimeOnSite": "Средно време прекарано в сайта",
+        "ColumnSumTimeOnSite": "Общо време в сайта",
         "ColumnAvgTimeOnSiteDocumentation": "Средна продължителност на посещение.",
         "ColumnBounceRate": "Процент",
         "ColumnBounceRateDocumentation": "Процент посещения, при които има само едно показване на страница. Това означава, че посетителят е напуснал сайта от страницата.",
@@ -62,6 +69,7 @@
         "ColumnPageBounceRateDocumentation": "Процент посещения, които започват от тази страница и са последвани от незабавно напускане на сайта.",
         "ColumnPageviews": "Входящи прегледи",
         "ColumnPageviewsDocumentation": "Брой посещения на тази страница.",
+        "ColumnPercentageVisits": "%% Посещения",
         "ColumnRevenue": "Приход",
         "ColumnSumVisitLength": "Цялото време прекарано от потребителите (в секунди)",
         "ColumnTotalPageviews": "Общо показвания",
@@ -74,6 +82,7 @@
         "ColumnViewedAfterSearchDocumentation": "Броят пъти, в който тази страница е била посетена, след като посетител е извършил търсене във вашия сайт и е щракнал върху връзка от списъка с резултати.",
         "ColumnVisitDuration": "Продължителност на посещение (в секунди)",
         "ColumnVisitsWithConversions": "Посещения с Конверсия",
+        "ComputedMetricAverageShortDocumentation": "Средна стойност от \"%1$s\".",
         "ConfigFileIsNotWritable": "Конфигурационният файл %1$s на Matomo не е достъпен и Вашите настройки няма да бъдат запазени. %2$s Моля променете правата на файла, така, че да може да се пише в него.",
         "Continue": "Продължи",
         "ContinueToPiwik": "Продължете към Matomo",
@@ -143,6 +152,7 @@
         "ExceptionLanguageFileNotFound": "Езиковия файл '%s' не бе намерен.",
         "ExceptionMethodNotFound": "Методът '%1$s' не съществува или не е наличен в модулът '%2$s'.",
         "ExceptionMissingFile": "Липсващ файл: %s",
+        "ExceptionDirectoryToDelete": "Папка за изтриване: %s",
         "ExceptionNonceMismatch": "Не може да се провери кода за сигурност на тази форма.",
         "ExceptionPrivilege": "Нямате достъп до този ресурс, тъй като изисква %s достъп.",
         "ExceptionUnableToStartSession": "Невъзможно е да се стартира сесия.",
@@ -227,7 +237,7 @@
         "NumberOfVisits": "Брой посетители",
         "NUsers": "%s потребители",
         "NVisits": "%s посещения",
-        "NUniqueVisitors": "%s уникални посетителя",
+        "NUniqueVisitors": "%s уникални посетители",
         "Ok": "Ок",
         "OneAction": "1 действие",
         "OneVisit": "1 посещение",
@@ -325,6 +335,7 @@
         "TagCloud": "Етикети",
         "Tax": "Данък",
         "TimeAgo": "%s преди",
+        "TimeFormat": "Формат за часа",
         "TimeOnPage": "Време на страница",
         "Total": "Общо",
         "TotalRevenue": "Общо приход",
@@ -444,7 +455,9 @@
         "VerifyAccount": "Потвърди акаунт-а",
         "ValidateSslCertificate": "Валидиране на SSL сертификат",
         "VerifyLoginData": "Уверете се, че комбинацията, от потребителско име и парола, е правилна.",
-        "YouAreOffline": "За съжаление, в момента не сте на линия"
+        "YouAreOffline": "За съжаление, в момента не сте на линия",
+        "EnterAuthCode": "Въведете код за удостоверяване",
+        "EnterCorrectAuthCode": "Въведете правилния код за удостоверяване"
     },
     "RowEvolution": {
         "AvailableMetrics": "Налични метрики",
