--- a/plugins/Feedback/lang/bg.json
+++ b/plugins/Feedback/lang/bg.json
@@ -8,6 +8,7 @@
         "SendFeedback": "Изпрати съобщението",
         "ThankYou": "Благодаря, че помогнахте да направим Matomo по-добър!",
         "TopLinkTooltip": "Може да ни кажете какво мислите, както и да изискате професионална помощ.",
-        "Forums": "Форуми"
+        "Forums": "Форуми",
+        "NotTrackingVisits": "Matomo не проследява посещенията"
     }
 }
