--- a/plugins/Live/lang/bg.json
+++ b/plugins/Live/lang/bg.json
@@ -17,6 +17,7 @@
         "NoMoreVisits": "Няма повече посещения за този посетител.",
         "PageRefreshed": "Броят пъти, които тази страница е гледана \/ обновена в ред.",
         "PreviousVisitor": "Предишен посетител",
+        "RealTimeVisitors": "Посещения в реално време",
         "RealTimeVisitorCount": "Броене на посетителите в реално време",
         "Referrer_URL": "URL Референции",
         "ShowMap": "покажи картата",
@@ -25,6 +26,7 @@
         "VisitedPages": "Посетени страници",
         "VisitorLogDocumentation": "Тази таблица показва последните посещения, включени в избраният обхват от време. Можете да видите кога се е случило последното посещение на посетител, като посочите върху датата на посещението. %1$s Ако обхвата на датата включва днешния ден, можете да видите вашите посетители в реално време! %2$s Информацията тук винаги е в реално време, независимо дали и колко често използвате инструментите за архивиране.",
         "VisitorProfile": "Профил на посетителя",
+        "VisitorsInRealTime": "Посещения в реално време",
         "VisitorsLastVisit": "Последното посещение от този посетител беше от преди %s дни.",
         "VisitsFrom": "%1$s%2$s посещения%3$s от"
     }
