--- a/plugins/Tour/lang/bg.json
+++ b/plugins/Tour/lang/bg.json
@@ -1,6 +1,7 @@
 {
     "Tour": {
         "Engagement": "Ангажимент",
+        "BrowseMarketplace": "Разгледайте магазина",
         "CompletionTitle": "Браво!"
     }
 }
