--- a/lang/en.json
+++ b/lang/en.json
@@ -133,6 +133,7 @@
         "DaysHours": "%1$s days %2$s hours",
         "DaysSinceFirstVisit": "Days since first visit",
         "DaysSinceLastEcommerceOrder": "Days since last Ecommerce order",
+        "SecondsSinceLastEcommerceOrder": "Seconds since last Ecommerce order",
         "DaysSinceLastVisit": "Days since last visit",
         "SecondsSinceLastVisit": "Seconds since last visit",
         "SecondsSinceFirstVisit": "Seconds since first visit",
