split latency into network and server time

--- a/plugins/PagePerformance/lang/en.json
+++ b/plugins/PagePerformance/lang/en.json
@@ -2,8 +2,10 @@
     "PagePerformance": {
         "ColumnAveragePageLoadTime": "Avg. page load time",
         "ColumnAveragePageLoadTimeDocumentation": "Average time (in seconds) how long it takes from requesting a page until the page is fully rendered within the browser",
-        "ColumnAverageTimeLatency": "Avg. latency time",
-        "ColumnAverageTimeLatencyDocumentation": "Average time (in seconds) how long it takes the response to get to the user’s device. Includes the time it takes for the request to get to the server, it takes the server to render a response, and until the first byte of that response gets back to the user’s device.",
+        "ColumnAverageTimeNetwork": "Avg. network time",
+        "ColumnAverageTimeNetworkDocumentation": "Average time (in seconds) how long it takes to connect to server. This includes the time needed to lookup DNS and establish a TCP connection. This value might be 0 after the first request to a domain as the browser might cache the connection.",
+        "ColumnAverageTimeServer": "Avg. server time",
+        "ColumnAverageTimeServerDocumentation": "Average time (in seconds) how long it takes the server to generate page. This is the time between the server receiving the request and start serving the response.",
         "ColumnAverageTimeTransfer": "Avg. transfer time",
         "ColumnAverageTimeTransferDocumentation": "Average time (in seconds) how long it takes the browser to download the response from the server. This is the time from receiving the first byte till the response is complete.",
         "ColumnAverageTimeDomProcessing": "Avg. DOM processing time",
@@ -12,12 +14,14 @@
         "ColumnAverageTimeDomCompletionDocumentation": "Average time (in seconds) how long it takes for the browser to load media and execute any Javascript code listening for the DOMContentLoaded event after the the webpage was loaded and the user can already interact with it.",
         "ColumnAverageTimeOnLoad": "Avg. on load time",
         "ColumnAverageTimeOnLoadDocumentation": "Average time (in seconds) how long it takes the browser to execute Javascript code waiting for the window.load event. This event is triggered once the DOM was completely rendered.",
-        "ColumnViewsWithTimeLatency": "Pageviews with latency time",
+        "ColumnViewsWithTimeNetwork": "Pageviews with network time",
+        "ColumnViewsWithTimeServer": "Pageviews with server time",
         "ColumnViewsWithTimeTransfer": "Pageviews with transfer time",
         "ColumnViewsWithTimeDomProcessing": "Pageviews with DOM processing time",
         "ColumnViewsWithTimeDomCompletion": "Pageviews with DOM completion time",
         "ColumnViewsWithTimeOnLoad": "Pageviews with on load time",
-        "ColumnTimeLatency": "Latency time",
+        "ColumnTimeNetwork": "Network time",
+        "ColumnTimeServer": "Server time",
         "ColumnTimeTransfer": "Transfer time",
         "ColumnTimeDomProcessing": "DOM processing time",
         "ColumnTimeDomCompletion": "DOM completion time",
